structure notes to inform discussion of chapter 6.

--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -81,15 +81,26 @@ title:  6. The Use of Gameplay Design Patterns "It’s like a project in itself,
 3. How can learners build agency in an evolving community of game makers?
 
 
-<!-- ## Notes to restructure
 
+## Notes to restructure
+
+Integrate the section on flexible design patterns into a discussion that also addresses aspects of the process of constructing repertoires using designed affordances facilitating "cultural mediation" [Moll]
+
+Thus Discussion points include
+
+* Explain findings using CHAT concepts, Actions to Operations. GDPs used in varied forms of mediation
+* Beyond mediation, it can be seen as a lens of TA transformative agency - how is this different? But this seems a high bar - examples unclear - and potentially lack a clear focus on cultural aspects?  
+* The concept of repertoires, seems appropriate to some mid uses, not simple mediation, but not HIGH transformative  - similar to assemblages or a rhizomatic perception.  
+* This flexibility is observable in data - flexible design practices
+
+**Older notes**
 Really address  the community aspect of the RQ - and highlight that this is why personal elements are not explored in more detail
 
 In each section if there are multiple aspects of that then put into headings  - and put this into the coding structure for data review
 
 Examine overlap of the cultural uses of GDP, and the next chapter - hand in hand here get an overview of what needs to extracted from the data and where it sits
 
-Also work out what to move to Lit Review - and restructure LT and Methodology based on two chapters near completion. -->
+Also work out what to move to Lit Review - and restructure LT and Methodology based on two chapters near completion.
 
 
 <!-- ### Word count
@@ -315,7 +326,7 @@ Article on intangibility of game feel.2025-1-8-DiscussionConclusion
 
 
 
-#### Summary: Home Funds and RQs - MOVED FROM CH. 7 TO 6 
+#### Summary: Home Funds and RQs - MOVED FROM CH. 7 TO 6
 
 This research supports findings of other research which highlight value of incorporating home interests in  games, coding and media projects [@resnick_mothers_2012; @papert_mindstorms:_1980]. It also aligns with PBL literature which advocates the personalisation of projects and the value of exploring concepts using home funds of knowledge [@moje_maestro_2001]
 
