some structural notes

--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -780,11 +780,40 @@ As previously explored I had a reluctance to shift learners away from the practi
 ## Reduced discussion section
 
 
-## Observations on emerging flexible design practices (MORE ON INTERPERSONAL LEVEL)
+### Intro in relation to mediation and repertoires
+
+
+
+**TADS / sannino vs gutierrez - and the purpose of inclusivity / equity**
+
+As part of this discussion of the role of GDPs not only as self-contained mediational tools, but as part of wider repertoires of practice is also explored. The reason being, that other non-GDP elements of the learning design are mixed together in these emerging repertoires, and thus to neglect to explore them would give an incomplete picture. However, I attempt to do this briefly to avoid overloading the reader.  OR THIS IS ONE IN APPENDIX
+
+Some discussion of how these findings on varied GDP use can be interpreted given CHAT concepts of  mediation and incorporation in wider repertoires of practice is useful at this point before exploring the concepts in relation to agency and inclusion in the following chapter.
+THIS SHOULD BE A RECAP GIVEN PREVIOUS USE IN EXAMPLES. USE TERMS IN VIGNETTE EXAMPLES. AND THEREFORE MOVE SOME OF THIS TO THE INTRO?
+
+Gutiérrez's focus on repertoires of practice, can be contrasted to  the focus of double stimulation and a form of experimental mediation within TADS [Sannio], to incorporate also a wider cultural focus of the learning process. NEXT CHAPTER?
+
+    Such a perspective on the relationship between culture and learning is also about attention to the “cultural mediation of thinking” (Moll, 1998) cited in [@digiacomo_seven_2017, p.44]
+
+It is of value to explore Gutiérrez's focus on movement of identity between settings and the role of facilitators to facilitate this via learning design in the context of this design.
+
+This justifies a wider focus on cultural elements, and the evolving medium culture via playtesting. And following that the link to inclusive linguistic element of the pedagogy which can be aligned with other inclusive practices of UDL. In this study the focus is less on aspects of ethnical cultural elements and more the those related to neurodiversity.
+YES - BUT IS THERE SPACE FOR THIS IF SO WHERE?
+
+### Observations on emerging flexible design practices (MORE ON INTERPERSONAL LEVEL)
 
 <!-- NOTE To restructure. -->
 
-This section outlines additional video and observational evidence on community and social activity which contributes to the research area on project and design approaches to learning coding. This section outlines and analyses potential useful practices which I characterise as _flexible design practices_ used a counterpoint to a potentially more prescriptive interpretation of design thinking stages.
+This section discusses findings on community and social activity in a way which aims to extend CHAT theory of Sannino and Gutierrez with specific domain observations  / concrete examples.
+
+<!-- This section outlines and analyses potential useful practices which  -->
+
+This chapter thus builds on CHAT concept of mediation and building repertoires.  
+
+
+In previous writing I have identified what I can as _flexible design practices_ used a counterpoint to a potentially more prescriptive interpretation of design thinking stages.
+
+
 
 This characterisation can be seen in some of the entries of the previous chapter which outlined  x, y and z.
 The use of GDPs here can be seen to be quite flexisble
