note on ch.6 structure

--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -93,6 +93,8 @@ Thus Discussion points include
 * The concept of repertoires, seems appropriate to some mid uses, not simple mediation, but not HIGH transformative  - similar to assemblages or a rhizomatic perception.  
 * This flexibility is observable in data - flexible design practices
 
+NOTE - perhaps flip the order again to end with cultural aspects, and include the drama process, and maker types / missions within the data presented. As an additional section or incorporate into the table - like within Funds of Identity. 
+
 **Older notes**
 Really address  the community aspect of the RQ - and highlight that this is why personal elements are not explored in more detail
 
