--- a/_posts/thesis_chapters/tocs/2025-1-6-Gdps.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2025-1-6-Gdps.md_toc.md
@@ -2,6 +2,7 @@
     really"](#the-use-of-gameplay-design-patterns-its-like-a-project-in-itself-really)
     -   [Research Questions - March
         2024](#research-questions---march-2024)
+    -   [Notes to restructure](#notes-to-restructure)
     -   [Introduction](#introduction)
         -   [Table of varied GDP use with supporting
             evidence](#table-of-varied-gdp-use-with-supporting-evidence)
@@ -13,6 +14,8 @@
             others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others)
         -   [GDPs facilitate the use of wider funds of knowledge and
             interest](#gdps-facilitate-the-use-of-wider-funds-of-knowledge-and-interest)
+            -   [Summary: Home Funds and RQs - MOVED FROM CH. 7 TO
+                6](#summary-home-funds-and-rqs---moved-from-ch.-7-to-6)
         -   [Evolution and propagation of GDPs concepts during
             playtesting](#evolution-and-propagation-of-gdps-concepts-during-playtesting)
     -   [GDPs used in the process of guided participation (Target
@@ -34,11 +37,13 @@
         processes (500 - Target
         750)](#the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes-500---target-750)
     -   [Reduced discussion section](#reduced-discussion-section)
-    -   [Observations on emerging flexible design practices (MORE ON
-        INTERPERSONAL
-        LEVEL)](#observations-on-emerging-flexible-design-practices-more-on-interpersonal-level)
-        -   [Observations and evidence on flexible design
-            practice](#observations-and-evidence-on-flexible-design-practice)
+        -   [Intro in relation to mediation and
+            repertoires](#intro-in-relation-to-mediation-and-repertoires)
+        -   [Observations on emerging flexible design practices (MORE ON
+            INTERPERSONAL
+            LEVEL)](#observations-on-emerging-flexible-design-practices-more-on-interpersonal-level)
+            -   [Observations and evidence on flexible design
+                practice](#observations-and-evidence-on-flexible-design-practice)
         -   [Discussion on Flexible Design
             Practices](#discussion-on-flexible-design-practices)
             -   [The potential of emergent "non-productive" activities -
