restructure of chapter 7.

--- a/_posts/thesis_chapters/2025-1-5-Design.md
+++ b/_posts/thesis_chapters/2025-1-5-Design.md
@@ -40,7 +40,7 @@ title: 5. Exploration of the Formative Learning Design Process
             -   [MOVED LINK - Applying activity theory to surface
                 contradictions and design tensions experienced by
                 participants and
-                facilitator/s](#moved-link---applying-activity-theory-to-surface-contradictions-and-design-tensions-experienced-by-participants-and-facilitators)
+                facilitator/s](#moved-link---applyinA more detailed exploration of the development of participant agency in relation to these social missions and playtesting is provided in Chapter 7.g-activity-theory-to-surface-contradictions-and-design-tensions-experienced-by-participants-and-facilitators)
             -   [Notes from vignette](#notes-from-vignette)
             -   [Notes before C1](#notes-before-c1)
             -   [Dropped from Discussion](#dropped-from-discussion)
@@ -543,7 +543,7 @@ REMOVED - ADD BACK IN LATER?
 
 The process of rising to the concrete via a germ cell concept is a powerful analytical and developmental tool [-@engestrom_embodied_2012]. In seeking the germ cell, the researcher explores complex, messy concrete processes over time to discern overarching concerns that can be expressed as a prototypical abstract germ cell concept. For this learning design, the concept and pedagogy of working with game design patterns (GDPs) emerged not only as an object of activity on a more granular scope than is typical but also as a germ cell concept valuable to both participants and facilitators. I continue the analysis of the orienting practice of GDPs as a germ cell concept in the following chapter.
 
-In the learning design outlined in this chapter, GDPs drive stage-based instructional processes. Using terminology from Denner et al. [-@denner_does_2019], the shift from P1 to P2 represents a move from a design-build-test to a stepwise, stage-based approach. Stepwise approaches introduce code structures and challenges in an initially simplistic, prototypical format for learners to experience and explore, which are subsequently replaced by more advanced models or complex instances of the task. While the initial use of GDPs in P1 was piecemeal, by P2, a more structured, stepwise approach had been implemented for participants as part of several guiding activities. GDPs were first identified through playing games in an activity adapted from Moveable Game Jams (ensure this is described or linked to) and were used as a list of features serving as a mediating planning tool. In P2, GDPs were incorporated as affordances into a starter game template, initially highlighted via facilitator interaction and later as the guiding principle of _quick start cards_ to scaffold modifications to the code template. The structure of documentation, created in response to participant requests for adding new GDPs to their games, evolved from a piecemeal format in P1 to, by the end of P2, a menu of GDP code snippets accompanied by detailed instructional documentation. In line with understandings of DBR research outputs, the identification and use of these patterns as research findings would be expressed as a set of "tentative generalisations" in the form of design heuristics drawn from the analysis of concrete practices [@hoadley_design-based_2022, p.215]. 
+In the learning design outlined in this chapter, GDPs drive stage-based instructional processes. Using terminology from Denner et al. [-@denner_does_2019], the shift from P1 to P2 represents a move from a design-build-test to a stepwise, stage-based approach. Stepwise approaches introduce code structures and challenges in an initially simplistic, prototypical format for learners to experience and explore, which are subsequently replaced by more advanced models or complex instances of the task. While the initial use of GDPs in P1 was piecemeal, by P2, a more structured, stepwise approach had been implemented for participants as part of several guiding activities. GDPs were first identified through playing games in an activity adapted from Moveable Game Jams (ensure this is described or linked to) and were used as a list of features serving as a mediating planning tool. In P2, GDPs were incorporated as affordances into a starter game template, initially highlighted via facilitator interaction and later as the guiding principle of _quick start cards_ to scaffold modifications to the code template. The structure of documentation, created in response to participant requests for adding new GDPs to their games, evolved from a piecemeal format in P1 to, by the end of P2, a menu of GDP code snippets accompanied by detailed instructional documentation. In line with understandings of DBR research outputs, the identification and use of these patterns as research findings would be expressed as a set of "tentative generalisations" in the form of design heuristics drawn from the analysis of concrete practices [@hoadley_design-based_2022, p.215].
 
 
 
