--- a/_posts/thesis_chapters/tocs/2025-1-6-Gdps.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2025-1-6-Gdps.md_toc.md
@@ -6,8 +6,6 @@
     -   [Introduction](#introduction)
         -   [Table of varied GDP use with supporting
             evidence](#table-of-varied-gdp-use-with-supporting-evidence)
-    -   [Extract and commentary on Vignette
-        2](#extract-and-commentary-on-vignette-2)
     -   [Use of GDPs in the cultural plane / community level of
         activity](#use-of-gdps-in-the-cultural-plane-community-level-of-activity)
         -   [The role of GDPs to facilitate learners to design for
@@ -46,8 +44,8 @@
                 practice](#observations-and-evidence-on-flexible-design-practice)
         -   [Discussion on Flexible Design
             Practices](#discussion-on-flexible-design-practices)
-            -   [The potential of emergent "non-productive" activities -
-                DROP?](#the-potential-of-emergent-non-productive-activities---drop)
+            -   [The potential of emergent social and cultural
+                activities](#the-potential-of-emergent-social-and-cultural-activities)
         -   [Discussion in relation to other
             research](#discussion-in-relation-to-other-research)
             -   [- beyond design cycle
@@ -64,3 +62,20 @@
         -   [Future work on abstraction, layers of abstraction GDPs and
             the MDA
             framework](#future-work-on-abstraction-layers-of-abstraction-gdps-and-the-mda-framework)
+    -   [MOVE FROM cH 7 - ANY SPACE
+        HERE?](#move-from-ch-7---any-space-here)
+    -   [Impact of Side Missions and Maker Types on playtesting
+        behaviours](#impact-of-side-missions-and-maker-types-on-playtesting-behaviours)
+        -   [Reflection on impact on my design
+            process](#reflection-on-impact-on-my-design-process)
+        -   [Observations on making
+            styles](#observations-on-making-styles)
+        -   [A focus on the value of changing roles - especially peer
+            teaching as reinforcing
+            learning](#a-focus-on-the-value-of-changing-roles---especially-peer-teaching-as-reinforcing-learning)
+        -   [Discussion on making types and side
+            missions](#discussion-on-making-types-and-side-missions)
+        -   [Discussion on Player types
+            -](#discussion-on-player-types--)
+        -   [Limitations of observations and careful statements of
+            potential](#limitations-of-observations-and-careful-statements-of-potential)
