--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -201,7 +201,7 @@ The child also shows initiative, particularly in relation to level design. There
 The interactions outlined in this vignette extract show some of the uses of GDPs as mediating strategies and repertoires of interaction that have emerged. These include x and y - which are explore in the next sections, particularly those a
 ddressing cultural practices and interpersonal /  guided participation. -->
 
-<!--
+<!--cd
 The supporting resources are available here.
 https://en.flossmanuals.net/phaser-game-making-in-glitch/_full/#game-mechanic-keys-and-doors -->
 
@@ -226,11 +226,22 @@ PULL OUT AN EXAMPLE -->
 
 ## The role of GDPs in the personal appropriation of concepts and processes (500 - Target 750)
 
-The previous section began to touch on the personal appropriation of coding skill via the debugging process.
+<!--
+KEEP LINK BUT MOVE LATER
+The previous section began to touch on the personal appropriation of coding skill via the debugging process. -->
 
-Rogoff's third plane of analysis, one  which mostly closely aligns with much educational research is that of personal appropriation. Rogoff is careful to underline the bi-directional nature of the appropriation of personal knowledge, emphasising Vygotsky's foundational view of knowledge as being mutually constituted as participants feed their interpretation of knowledge back into the communities of which they are a part.  
 
-As outlined in Chapter 2, the focus on skills and knowledge developed by participants is one of the strongest threads in related research on digital coding and game making, and particulary in that of constructionist school [@kafai_constructionist_2015-1; @papert_mindstorms:_1980]. Papert's research on Microworlds saw one of the roles learning designers to shape the affordances of playful learning environments to steer learners to explore scientific concepts,  mathematical concepts, for example geometry in Turtle computing. In this research, detailed study of young coders evolving code creations and accompanying interview data allowed a close study of the personal appropriation, including elements of understanding, application and sharing back this knowledge via created and shared digital projects. Much subsequent research on the use of coding to develop both concrete and more abstract computational thinking skills, has neglected this social and perspectives [find source], instead focusing on a personal dimension of learning as a curricular skill to be absorbed and tested. By way of contrast, this study is aligned with the development of the constructionist movement towards socio-cultural approaches to transcend individual personal conceptions of knowledge, exemplified by the issues associated with the UK computing curriculum. In this informal learning context, there was scant desire from participants to explore concepts aligned with computing curriculum, instead driven more by practical desire to make a game using the tools provided.
+As outlined in Chapter 2, the focus on skills and knowledge developed by participants is the dominant thread in research on digital coding and game making [@kafai_constructionist_2015-1; @papert_mindstorms:_1980].
+
+The research aims of this study focus on the under explored areas of social and cultural aspects of the coding process of novices. The design of this study does not suit full exploration of the personal plane of activity. HOW .
+Despite this, the making process surfaced and allow the exploration of surfacing of computational thinking and other curricular concepts.
+
+
+Given that this dimension is not explored in the thesis which has a greater focus on community and social aspects of use of GDPs, examples of personal appropriation are included here only briefly (additional examples may be included in  Appendix.learning)
+
+Additionally, the repeated, solo, incremental changes of the details of implementation of game design patterns indicate a personal appropriation of concepts like game feel and challenge and design processes.
+
+Papert's research on Microworlds saw one of the roles learning designers to shape the affordances of playful learning environments to steer learners to explore scientific concepts,  mathematical concepts, for example geometry in Turtle computing.
 
 Despite this positioning, given the potential to adapt this learning design to a more formal environment to address needs outlined in the introductory chapter, from P2 onwards I began to augment the learning design to suit curriculum oriented teaching and assessment of computational thinking concepts and skills, a process which resulted in a learning map of curricular concepts included here as Table 6.x .
 
@@ -249,20 +260,18 @@ Table 6.x. Learning Dimensions of the 3M Game Making Model
 
 Appendix.learningmap explores in more detail the evolution of this map, which acknowledges significant tensions in integration of concepts into a informal context, and draws on the process and rationale of Bevan and Petrich's  [-@bevan_learning_2015; -@petrich_it_2013] work to bring a similar learning map to a seemingly chaotic tinkering and making process in museum contexts. A summary of my book chapter [@chesterman_game_2023] exploring these issues with recommendations for practitioners is included in Appendix.learningmap
 
-This exploration focuses on the potential of the 3M learning design rather than making claims on the suitability to develop CT via game making which is explored extensively in other research. Conceptions of personal appropriation should not be limited to only the curricular concepts included in the learning map, the many of the behaviours explored above show both the appropriation and feeding back of varied understandings of game design patterns and related concepts and skills. While the design of this study does not suit full exploration of the personal plane of activity, the repeated, solo, incremental changes of the details of implementation of game design patterns indicate a personal appropriation of concepts like game feel and challenge and design processes.
+This exploration focuses on the potential of the 3M learning design rather than making claims on the suitability to develop CT via game making which is explored extensively in other research. Conceptions of personal appropriation should not be limited to only the curricular concepts included in the learning map, the many of the behaviours explored above show both the appropriation and feeding back of varied understandings of game design patterns and related concepts and skills.
 
+Rogoff's third plane of analysis, one  which mostly closely aligns with much educational research is that of personal appropriation. Rogoff is careful to underline the bi-directional nature of the appropriation of personal knowledge, emphasising Vygotsky's foundational view of knowledge as being mutually constituted as participants feed their interpretation of knowledge back into the communities of which they are a part.  Given this bi-directional process, aspects of personal appropriation can be inferred from interpersonal interactions explored in the following section.
 
 <!-- The process of reusing and modify code to create a computer game can surface both abstract and concrete computing concepts present in the concrete application of code that have emerged organically at different stages of the creative process. -->
 
-Given that this dimension is not explored in the thesis which has a greater focus on community and social aspects of use of GDPs, examples of personal appropriation are included in Appendix.learning
+<!-- The ongoing reflection provoked by the process of privileging social and cultural aspects of the game making activity has yielded more philosophical questions in relation to the learning process which are explored in the following discussion section. -->
 
-The ongoing reflection provoked by the process of privileging social and cultural aspects of the game making activity has yielded more philosophical questions in relation to the learning process which are explored in the following discussion section.
-
+MOVE? COMPRESS?
+In Papert's research, detailed study of young coders evolving code creations and accompanying interview data allowed a close study of the personal appropriation, including elements of understanding, application and sharing back this knowledge via created and shared digital projects. Much subsequent research on the use of coding to develop both concrete and more abstract computational thinking skills, has neglected this social and perspectives [find source], instead focusing on a personal dimension of learning as a curricular skill to be absorbed and tested. By way of contrast, this study is aligned with the development of the constructionist movement towards socio-cultural approaches to transcend individual personal conceptions of knowledge, exemplified by the issues associated with the UK computing curriculum. In this informal learning context, there was scant desire from participants to explore concepts aligned with computing curriculum, instead driven more by practical desire to make a game using the tools provided.
 
 <!-- Here learner agency is transformative not only of personal dimensions of learning but also the cultural setting, practices and tools available to learners. The process of playtesting other games allowed participants to share their on emerging interpretations of game making concepts like game feel and challenge without being directly taught. Further, the community sense of what is appropriate of fun evolves as mutually and therefore cannot be taught explicitly. -->
-
-
-
 
 <!-- As explored in the design chapter, later revisions of the design of supporting materials for each GDP included links to online descriptions of design, systems and computational concepts. Thus, beginning with experience and progressing to analysis in a sway that mirrors reflective professional practice. However analysis of my journal entries show  -->
 
@@ -609,10 +618,7 @@ In analysis of journal notes and recorded screens I began to identify different 
 
 Aspects of the design, use of a starting template and supporting resources based on code snippets and thus code patching process increased appear to encourage glitch bugs. See Vignette 1 for an example of a glitch bug which provoked further investigation and hand on tinkering. A diversity of helping strategies evolved, my own and those of others, in response to errors. For my part, these altered when I judged when participants to be receptive to different forms of input. Glitch errors were often embraced as curiosities and as a learning opportunity to understand the related code and associated abstract concepts using a concrete example afforded by the mechanics of the game design pattern. Mirroring the proposition of half baked games theory that a incomplete / templated game are motivates initial participation, my observation support a position that glitch bugs, which move game into a broken state also provide motivation. Additionally, as the bug relates to a targeted GDP which is closely coupled with a suggested code solution and tutorial, this process incorporates the benefits of a just-in-time approach to supporting documentation
 
-
-The debugging process at times surfaced and allow the exploration of surfacing of computational thinking and other curricular concepts, a topic explored as part of the next section. This area opens some interesting lines of questioning which are beyond the full remit of this research but are included in Appendix.tech.2 as promising areas for future work. When addressing issues of motivation and efficacy a different research methodology would be needed.
-
-
+This area opens some interesting lines of questioning which are beyond the full remit of this research but are included in Appendix.tech.2 as promising areas for future work. When addressing issues of motivation and efficacy a different research methodology would be needed.
 
 <!-- - Question - do more useful / less de-motivating errors result from remixing and game patching?
 - Question - what impact does the process of being driven by GDPs have on how users deal with errors?
