--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -14,19 +14,13 @@ title:  6. The Use of Gameplay Design Patterns "It’s like a project in itself,
     really"](#the-use-of-gameplay-design-patterns-its-like-a-project-in-itself-really)
     -   [Research Questions - March
         2024](#research-questions---march-2024)
+    -   [Notes to restructure](#notes-to-restructure)
     -   [Introduction](#introduction)
         -   [Table of varied GDP use with supporting
             evidence](#table-of-varied-gdp-use-with-supporting-evidence)
-    -   [Extract and commentary on Vignette
-        2](#extract-and-commentary-on-vignette-2)
-    -   [Use of GDPs in the cultural plane / community level of
-        activity](#use-of-gdps-in-the-cultural-plane-community-level-of-activity)
-        -   [The role of GDPs to facilitate learners to design for
-            others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others)
-        -   [GDPs facilitate the use of wider funds of knowledge and
-            interest](#gdps-facilitate-the-use-of-wider-funds-of-knowledge-and-interest)
-        -   [Evolution and propagation of GDPs concepts during
-            playtesting](#evolution-and-propagation-of-gdps-concepts-during-playtesting)
+    -   [The role of GDPs in the personal appropriation of concepts and
+        processes (500 - Target
+        750)](#the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes-500---target-750)
     -   [GDPs used in the process of guided participation (Target
         2500)](#gdps-used-in-the-process-of-guided-participation-target-2500)
         -   [GDPs and their grouping as a collection or menu of
@@ -42,19 +36,28 @@ title:  6. The Use of Gameplay Design Patterns "It’s like a project in itself,
             data](#discussion-on-division-of-labour-in-the-video-data)
         -   [The role of GDP used in emerging technical processes
             (900)](#the-role-of-gdp-used-in-emerging-technical-processes-900)
-    -   [The role of GDPs in the personal appropriation of concepts and
-        processes (500 - Target
-        750)](#the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes-500---target-750)
+    -   [Use of GDPs in the cultural plane / community level of
+        activity](#use-of-gdps-in-the-cultural-plane-community-level-of-activity)
+        -   [The role of GDPs to facilitate learners to design for
+            others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others)
+        -   [GDPs facilitate the use of wider funds of knowledge and
+            interest](#gdps-facilitate-the-use-of-wider-funds-of-knowledge-and-interest)
+            -   [Summary: Home Funds and RQs - MOVED FROM CH. 7 TO
+                6](#summary-home-funds-and-rqs---moved-from-ch.-7-to-6)
+        -   [Evolution and propagation of GDPs concepts during
+            playtesting](#evolution-and-propagation-of-gdps-concepts-during-playtesting)
     -   [Reduced discussion section](#reduced-discussion-section)
-    -   [Observations on emerging flexible design practices (MORE ON
-        INTERPERSONAL
-        LEVEL)](#observations-on-emerging-flexible-design-practices-more-on-interpersonal-level)
-        -   [Observations and evidence on flexible design
-            practice](#observations-and-evidence-on-flexible-design-practice)
+        -   [Intro in relation to mediation and
+            repertoires](#intro-in-relation-to-mediation-and-repertoires)
+        -   [Observations on emerging flexible design practices (MORE ON
+            INTERPERSONAL
+            LEVEL)](#observations-on-emerging-flexible-design-practices-more-on-interpersonal-level)
+            -   [Observations and evidence on flexible design
+                practice](#observations-and-evidence-on-flexible-design-practice)
         -   [Discussion on Flexible Design
             Practices](#discussion-on-flexible-design-practices)
-            -   [The potential of emergent "non-productive" activities -
-                DROP?](#the-potential-of-emergent-non-productive-activities---drop)
+            -   [The potential of emergent social and cultural
+                activities](#the-potential-of-emergent-social-and-cultural-activities)
         -   [Discussion in relation to other
             research](#discussion-in-relation-to-other-research)
             -   [- beyond design cycle
@@ -71,6 +74,23 @@ title:  6. The Use of Gameplay Design Patterns "It’s like a project in itself,
         -   [Future work on abstraction, layers of abstraction GDPs and
             the MDA
             framework](#future-work-on-abstraction-layers-of-abstraction-gdps-and-the-mda-framework)
+    -   [MOVE FROM cH 7 - ANY SPACE
+        HERE?](#move-from-ch-7---any-space-here)
+    -   [Impact of Side Missions and Maker Types on playtesting
+        behaviours](#impact-of-side-missions-and-maker-types-on-playtesting-behaviours)
+        -   [Reflection on impact on my design
+            process](#reflection-on-impact-on-my-design-process)
+        -   [Observations on making
+            styles](#observations-on-making-styles)
+        -   [A focus on the value of changing roles - especially peer
+            teaching as reinforcing
+            learning](#a-focus-on-the-value-of-changing-roles---especially-peer-teaching-as-reinforcing-learning)
+        -   [Discussion on making types and side
+            missions](#discussion-on-making-types-and-side-missions)
+        -   [Discussion on Player types
+            -](#discussion-on-player-types--)
+        -   [Limitations of observations and careful statements of
+            potential](#limitations-of-observations-and-careful-statements-of-potential)
 
 # The Use of Gameplay Design Patterns "It’s like a project in itself, really"
 
